This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: PyUnicode_FromFormatV can leak PyUnicodeWriter
Type: resource usage Stage:
Components: Interpreter Core Versions: Python 3.7, Python 3.6, Python 3.5
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: christian.heimes, python-dev, serhiy.storchaka, vstinner
Priority: normal Keywords:

Created on 2016-09-21 09:54 by christian.heimes, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Messages (3)
msg277118 - (view) Author: Christian Heimes (christian.heimes) * (Python committer) Date: 2016-09-21 09:54
PyUnicode_FromFormatV() does not call _PyUnicodeWriter_Finish() in p > 127 case and therefore leaks a PyUnicodeWriter instance.
msg277129 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2016-09-21 12:19
New changeset 00f090563f1b by Victor Stinner in branch '3.5':
Fix PyUnicode_FromFormatV() error handling
https://hg.python.org/cpython/rev/00f090563f1b
msg277132 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2016-09-21 12:55
Thanks for the report, it should be fixed now.
History
Date User Action Args
2022-04-11 14:58:37adminsetgithub: 72420
2016-09-21 12:55:58vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg277132
2016-09-21 12:19:50python-devsetnosy: + python-dev
messages: + msg277129
2016-09-21 10:06:01serhiy.storchakasetnosy: + vstinner, serhiy.storchaka
2016-09-21 09:54:58christian.heimescreate