Fix PyUnicode_FromFormatV() error handling

Issue #28233: Fix a memory leak if the format string contains a non-ASCII
character, destroy the unicode writer.